@@ -28,10 +28,10 @@ Local Open Scope string_scope.
 
 (** Equality is decidable *)
 
-Definition string_dec : forall s1 s2 : string, {s1 = s2} + {s1 <> s2}.
-Proof.
- decide equality; apply ascii_dec.
-Defined.
+Scheme Equality for string.
+Notation string_dec := string_eq_dec.
+Notation string_dec_bl := internal_string_dec_bl.
+Notation string_dec_lb := internal_string_dec_lb.
 
 (** *** Concatenation of strings *)
 
